# optera

./: .env.example  .gitignore  CLAUDE.md  README.md  WHAT_IS_OPTERA.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/engine/: README.md  pyproject.toml
apps/engine/app/: __init__.py  api.py  config.py  main.py  models.py
apps/engine/app/ai/: __init__.py  advice_filter.py  alert_writer.py  copilot.py  gateway.py  tools.py
apps/engine/app/ai/providers/: __init__.py  base.py  gemini.py  groq.py
apps/engine/app/brokers/: __init__.py  base.py  factory.py  instruments.py  mock.py  upstox.py
apps/engine/app/db/: __init__.py  supabase.py
apps/engine/app/quant/: __init__.py  black_scholes.py  iv.py  payoff.py  pop.py  portfolio.py  scenario.py  types.py
apps/engine/app/realtime/: __init__.py  demo_feed.py  feed_decode.py  upstox_feed.py
apps/engine/app/realtime/proto/: MarketDataFeed_pb2.py  __init__.py
apps/engine/app/security/: __init__.py  auth.py  crypto.py
apps/engine/app/services/: alert_service.py  journal_service.py  positions_service.py  quant_service.py  sim_service.py  stream_service.py
apps/engine/app/sim/: __init__.py  accounting.py  market.py
apps/engine/tests/: test_ai.py  test_alerts.py  test_api_quant.py  test_broker.py  test_feed_decode.py  test_health.py  test_m9.py  test_mock_broker.py  test_positions.py  test_quant.py  test_security.py  test_sim.py  test_stream.py  test_upstox_feed.py
apps/web/: components.json  middleware.ts  next.config.mjs  package.json  tailwind.config.ts  (+2 more)
scripts/: auto-push.sh
(+41 files in other folders)
