[project]
name = "optera-engine"
version = "0.1.0"
description = "Optera quant + realtime + AI orchestration engine (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "httpx>=0.27.0",
    "redis>=5.2.0",
    "cryptography>=43.0.0",
    "python-dotenv>=1.0.1",
    "websockets>=13.1",
    "pyjwt>=2.9.0",
    "protobuf>=5.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "grpcio-tools>=1.66.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["app/realtime/proto/*_pb2.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
